--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <label class=container>46 - 55 <input type=checkbox> <span class=checkmark></span></label>
 <label class=container>55+ <input type=checkbox> <span class=checkmark></span></label>
 </div>
-<a class="button next" href=http://tkr.1ondate.com/cool.php?lp=1>CONTINÚE</a>
+<a class="button next" href=#>CONTINÚE</a>
 </div>
 </div>
 <div class=slide id=slide10>
@@ -222,7 +222,7 @@
 <h3>¡ENHORABUENA!</h3>
 <p>Ya puedes ver nuestra lista y las fotos de las mujeres de <span class=city>tu zona</span>. Pero, de nuevo, te pedimos que nunca reveles tu identidad. Haz clic en el botón "CONTINÚE" y busca en función de tu código postal.</p>
 <div class=buttonContainer>
-<a class="button showOffer" href="https://tkr.1ondate.com/cool.php?lp=1"">CONTINÚE</a>
+<a class="button" href="https://tkr.1ondate.com/cool.php?lp=1"">CONTINÚE</a>
 </div>
 </div>
 </div>
